[package]
name = "aarch64-rt"
version = "0.4.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Startup code and exception vector for aarch64 Cortex-A processors."
authors = ["Andrew Walbran <qwandor@google.com>"]
repository = "https://github.com/google/aarch64-rt"
keywords = ["arm", "aarch64", "cortex-a"]
categories = ["embedded", "no-std"]
rust-version = "1.88.0"

[dependencies]
smccc = { version = "0.2.2", optional = true }

[dev-dependencies]
aarch64-paging = { version = "0.11.0", default-features = false }
arm-pl011-uart = "0.4.0"
smccc = "0.2.2"

[features]
default = ["exceptions", "initial-pagetable", "psci"]
el1 = []
el2 = []
el3 = []
exceptions = []
initial-pagetable = []
psci = ["dep:smccc"]

[package.metadata.docs.rs]
default-target = "aarch64-unknown-none"
